fix(case_list.template): repalce fields with fields_optional

--- a/generators/templates/case_list.template
+++ b/generators/templates/case_list.template
@@ -6,7 +6,7 @@ import (
 )
 
 type ListInput struct {
-	{{fields}}
+	{{fields_optional}}
 }
 
 func (c {{name_capitalized}}Case) List(ctx context.Context, input ListInput) ([]g.ListOutput, error) {
