--- a/generators/templates/case_paginate.template
+++ b/generators/templates/case_paginate.template
@@ -7,7 +7,7 @@ import (
 )
 
 type PaginateFilter struct {
-	{{fields}}
+	{{fields_optional}}
 }
 
 func (c {{name_capitalized}}Case) Paginate(ctx context.Context, input PaginateFilter, paginate database.PaginateInput) (*g.PaginateOutput, error) {
