--- a/generators/templates/controller_fiber_create.template
+++ b/generators/templates/controller_fiber_create.template
@@ -2,14 +2,14 @@ package {{name}}_controller
 
 import (
 	"{{project_name}}/usecases/{{name}}_case"
-	fiber_framework "{{project_name}}/frameworks/http/fiber"
+	"{{project_name}}/frameworks/http/fiber/parser"
 
 	"github.com/gofiber/fiber/v2"
 )
 
 func (c {{name_capitalized}}Controller) Create(ctx *fiber.Ctx) error {
 	data := &{{name}}_case.CreateInput{}
-	if err := fiber_framework.ValidateBody(data, ctx); err != nil {
+	if err := parser.ParseBody(ctx, data); err != nil {
 		return ctx.JSON(err)
 	}
 
