--- a/generators/templates/controller_fiber_patch.template
+++ b/generators/templates/controller_fiber_patch.template
@@ -2,7 +2,7 @@ package {{name}}_controller
 
 import (
 	"{{project_name}}/usecases/{{name}}_case"
-	fiber_framework "{{project_name}}/frameworks/http/fiber"
+	"{{project_name}}/frameworks/http/fiber/parser"
 
 	"github.com/gofiber/fiber/v2"
 )
@@ -14,7 +14,7 @@ func (c {{name_capitalized}}Controller) Patch(ctx *fiber.Ctx) error {
 	}
 
 	data := {{name}}_case.PatchValues{}
-	if err := fiber_framework.ValidateBody(&data, ctx); err != nil {
+	if err := parser.ParseBody(ctx, &data); err != nil {
 		return ctx.JSON(err)
 	}
 
