--- a/generators/templates/controller_fiber_list.template
+++ b/generators/templates/controller_fiber_list.template
@@ -8,10 +8,10 @@ import (
 
 func (c {{name_capitalized}}Controller) List(ctx *fiber.Ctx) error {
 	filter := &{{name}}_case.ListInput{}
-	if err := ctx.QueryParser(&filter); err != nil {
+	if err := ctx.QueryParser(filter); err != nil {
 		return err
 	}
-	
+
 	result, err := c.usecase.List(ctx.Context(), *filter)
 
 	if err != nil {
