--- a/generators/templates/controller_fiber_patch.template
+++ b/generators/templates/controller_fiber_patch.template
@@ -1,16 +1,16 @@
 package {{name}}_controller
 
 import (
-	"{{project_name}}/usecases/{{name}}_case"
 	"{{project_name}}/frameworks/http/fiber/parser"
+	"{{project_name}}/usecases/{{name}}_case"
 
 	"github.com/gofiber/fiber/v2"
 )
 
 func (c {{name_capitalized}}Controller) Patch(ctx *fiber.Ctx) error {
-	filter := &{{name}}_case.PatchFilter{}
-	if err := ctx.QueryParser(&filter); err != nil {
-		return err
+	id := ctx.Params("id")
+	filter := &{{name}}_case.PatchFilter{
+		ID: &id,
 	}
 
 	data := {{name}}_case.PatchValues{}
