--- a/generators/templates/gateway_gorm_adapter.template
+++ b/generators/templates/gateway_gorm_adapter.template
@@ -1,7 +1,7 @@
 package {{name}}_gateway
 
-import "{{project_name}}/adapters/database"
+import "{{project_name}}/frameworks/database/gorm_adapter"
 
 type Gorm{{name_capitalized}}GatewayAdapter struct {
-	DB *database.GormAdapter
+	DB *gorm_adapter.GormAdapter
 }
