--- a/generators/templates/factory.template
+++ b/generators/templates/factory.template
@@ -4,6 +4,7 @@ import (
 	"{{project_name}}/frameworks/database"
 	g "{{project_name}}/frameworks/database/gateways/{{name}}_gateway"
 	c "{{project_name}}/frameworks/http/controllers/{{name}}_controller"
+	"{{project_name}}/frameworks/database/gorm_adapter"
 
 	"{{project_name}}/usecases/{{name}}_case"
 )
