--- a/generators/templates/controller_fiber_paginate.template
+++ b/generators/templates/controller_fiber_paginate.template
@@ -1,7 +1,7 @@
 package {{name}}_controller
 
 import (
-	database "{{project_name}}/frameworks/database/gorm"
+	"{{project_name}}/frameworks/database/gorm_adapter"
 	"{{project_name}}/usecases/{{name}}_case"
 	"strconv"
 
