--- a/generators/templates/gateway_gorm_paginate.template
+++ b/generators/templates/gateway_gorm_paginate.template
@@ -1,7 +1,7 @@
 package {{name}}_gateway
 
 import (
-	database "{{project_name}}/frameworks/database/gorm"
+	"{{project_name}}/frameworks/database/gorm_adapter"
 	"{{project_name}}/frameworks/database/gorm_adapter/models"
 )
 
