--- a/generators/templates/gateway_interface.template
+++ b/generators/templates/gateway_interface.template
@@ -1,7 +1,7 @@
 package {{name}}_gateway
 
 import (
-	"{{project_name}}/frameworks/database/gorm_adapter"
+	"{{project_name}}/frameworks/database"
 )
 
 type {{name_capitalized}}Gateway interface {
