Refactor code structure to use 'libs' directory for gateways, controllers, and adapters
- Updated import paths in case templates to use 'libs/database/gateways' and 'libs/http/controllers'.
- Refactored factory and usecase templates to align with new import paths.
- Adjusted Gorm adapter templates to reflect changes in import paths.
- Modified HTTP interface and parser templates for consistency with new structure.
- Updated main.go to generate files in the 'libs' directory instead of 'frameworks'.
- Ensured all relevant templates and files are correctly referencing the new paths.

--- a/generators/templates/factory.template
+++ b/generators/templates/factory.template
@@ -1,10 +1,10 @@
 package factories
 
 import (
-	"{{project_name}}/frameworks/database"
-	g "{{project_name}}/frameworks/database/gateways/{{name}}_gateway"
-	c "{{project_name}}/frameworks/http/controllers/{{name}}_controller"
-	"{{project_name}}/frameworks/database/gorm_adapter"
+	"{{project_name}}/libs/database"
+	g "{{project_name}}/libs/database/gateways/{{name}}_gateway"
+	c "{{project_name}}/libs/http/controllers/{{name}}_controller"
+	"{{project_name}}/libs/database/gorm_adapter"
 
 	"{{project_name}}/usecases/{{name}}_case"
 )
