--- a/generators/templates/routes_fiber.template
+++ b/generators/templates/routes_fiber.template
@@ -1,7 +1,7 @@
 package routes
 
 import (
-	"{{project_name}}/frameworks/http/controllers/{{name}}_controller"
+	"{{project_name}}/libs/http/controllers/{{name}}_controller"
 
 	"github.com/gofiber/fiber/v2"
 )
